feat: game balance is returned from new-game and new-round
